Fixes logo and nav-links visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,13 +112,13 @@ header .navbar {
 }
 
 .navbar .nav-logo .logo-text {
-    color: var(--white-color);
+    color: var(--font-dark-color-2);
     font-size: var(--font-extra-large);
     font-weight: var(--font-bold);
 }
 
 .navbar .nav-menu .nav-link {
-    color: var(--white-color);
+    color: var(--font-dark-color-2);
     font-size: var(--font-medium);
     font-weight: var(--font-medium);
     margin: 0 1.5rem;
